--- a/src/scss/page/_social.scss
+++ b/src/scss/page/_social.scss
@@ -22,7 +22,7 @@
             h2{
                 @include display-2;
                 font-weight: bolder;
-                color: #000;
+                color: #2F353D;
                 text-align: center;
             }
         }
