--- a/src/scss/page/_about.scss
+++ b/src/scss/page/_about.scss
@@ -1,15 +1,15 @@
 .about{
     &#{-sec1}{
-        height: 80vh;
-        @include media-max($xl) {
-            height: 40rem;
-        }
-        @include media-max($md) {
-            height: 30rem;
-        }
-        @include media-max($sm) {
-            height: 20rem;
-        }
+        
+        height: 48rem;
+        @include media-max($xxl){height: 42rem;}
+        @include media-max($xl) {height: 36rem;}
+        @include media-max($lg) {height: 30rem;}
+        @include media-max($md) {height: 24rem;}
+        @include media-max($sm) {height: 20rem;}
+        @include media-max($xs) {height: 14rem;}
+        @include media-max($xxs){height: 12rem;}
+        
         background-size: cover;
         background-position: center center;
         &#{-container}{
@@ -31,6 +31,7 @@
                     font-weight: bolder;
                     color: #fafaf9;
                     text-shadow: 0.0625rem 0.0625rem 0.25rem rgba(0,0,0,0.8);
+                    font-weight: bolder;
                     
                 }
             }
@@ -85,6 +86,7 @@
                                 color: #fefefe;
                                 margin-top: 3rem;
                                 margin-bottom: 0.5rem;
+                                font-weight: bolder;
                             }
                             p{
                                 font-size: 1.5rem;
@@ -135,7 +137,7 @@
                 margin-bottom: 0.5rem;
             }
             p{
-                color: #010101;
+                color: #2F353D;
                 font-size: 0.9375rem;
             }
         }
@@ -150,12 +152,13 @@
                 @include py(4.5rem);
 
                 h2{
-                    color: #000;
+                    color: #2F353D;
                     @include display-3;
                     margin-bottom: 1.5rem;
+                    font-weight: bolder;
                 }
                 p{
-                    color: #000;
+                    color: #2F353D;
                     font-size: 0.9375rem;
                     margin-bottom: 1rem;
                     &:nth-of-type(1){
@@ -198,6 +201,7 @@
                     color: #fcfcfb;
                     @include display-3;
                     margin-bottom: 1.5rem;
+                    font-weight: bolder;
                 }
                 p{
                     color: #fcfcfb;
@@ -266,12 +270,13 @@
                 text-align: center;
 
                 h2{
-                    color: #000;
+                    color: #2F353D;
                     @include display-3;
                     margin-bottom: 1.5rem;
+                    font-weight: bolder;
                 }
                 p{
-                    color: #000;
+                    color: #2F353D;
                     font-size: 0.9375rem;
                     max-width: 992px;
                     margin: 1rem auto;
@@ -310,7 +315,7 @@
                         }
                         figcaption{
                             font-size: 1.25rem;
-                            color: #000;
+                            color: #2F353D;
                             @include py(0.75rem);
                         }
                     }
@@ -332,9 +337,10 @@
                 text-align: center;
 
                 h2{
-                    color: #000;
+                    color: #2F353D;
                     @include display-3;
                     margin-bottom: 1.5rem;
+                    font-weight: bolder;
                 }
             }
         }
@@ -533,6 +539,9 @@
             width: 1rem;
             height: 0.125rem;
             opacity: 1;
+        }
+        &:hover {
+            opacity: 0.9;
         }
     }
     
