--- a/src/scss/page/_home.scss
+++ b/src/scss/page/_home.scss
@@ -80,7 +80,10 @@
         }
     }
     &#{-sec2}{
-        background-position: center;
+        background-color: #000;
+        background-position: right center;
+        background-repeat: no-repeat;
+
         height: 100vh;
         position: relative;
         @include media-max($sm) {
@@ -294,15 +297,11 @@
                     @include media-min($lg) {
                         @include col(33.333%);
                     }
-                    @include py(0.125rem);
-                    
-                    > a > figure{
-                        background-size: cover;
-                        background-position: center;
+                    @include py(0.5rem);
+                    figure{
                         width: 100%;
-                        height: 18rem;
-                        @include media-max($sm) {
-                            height: 12rem;
+                        img{
+                            width: 100%;
                         }
                     }
                 }
@@ -393,6 +392,9 @@
             width: 0.625rem;
             height: 0.125rem;
             opacity: 1;
+        }
+        &:hover {
+            opacity: 0.75;
         }
     }
     
