--- a/src/scss/page/_ourBraud.scss
+++ b/src/scss/page/_ourBraud.scss
@@ -115,6 +115,9 @@
             height: 0.125rem;
             opacity: 1;
         }
+        &:hover {
+            opacity: 0.75;
+        }
     }
     
     .slick-prev{
@@ -191,12 +194,12 @@
                 @include display-3;
                 font-weight: bolder;
                 margin-bottom: 1.5rem;
-                color: #000;
+                color: #2F353D;
             }
             p{
                 font-size: 0.9325rem;
                 margin-bottom: 1.5rem;
-                color: #000;
+                color: #2F353D;
             }
         }
     }
@@ -217,7 +220,7 @@
             }
             h2{
                 text-align: center;
-                color: #000;
+                color: #2F353D;
                 font-weight: bolder;
                 @include display-3;
                 margin-bottom: 3rem;
@@ -235,7 +238,7 @@
             }
             h2{
                 text-align: center;
-                color: #000;
+                color: #2F353D;
                 font-weight: bolder;
                 @include display-3;
                 margin-bottom: 3rem;
@@ -318,7 +321,7 @@
                             padding: 0.25rem 1.5rem;
                         }
                         a{
-                            color: #000;
+                            color: #2F353D;
                         }
                         &:nth-of-type(1){order: 2;}
                         &:nth-of-type(2){order: 3;}
@@ -374,7 +377,7 @@
             text-align: left;
             span{
                 @include px(1rem);
-                color: #1b212d;
+                color: #2F353D;
                 font-size: 1.5rem;
                 font-weight: bolder;
                 line-height: 2rem;
@@ -414,6 +417,9 @@
             width: 0.625rem;
             height: 0.125rem;
             opacity: 1;
+        }
+        &:hover {
+            opacity: 0.75;
         }
     }
     
