--- a/src/scss/page/_innovation.scss
+++ b/src/scss/page/_innovation.scss
@@ -56,7 +56,7 @@
             transform: translate(0, -50%);
 
             @include media-max($md) {
-                display: none;
+                text-align: center;
             }
 
             h2 {
@@ -275,6 +275,12 @@
         &#{_video} {
             &#{-buttonGroup} {
                 display: flex;
+                flex-wrap: wrap;
+                @include media-max($xl) {
+                    @include px(0.25rem);
+                    justify-content: center;
+                }
+                
                 button {
                     background-color: #dad9d9;
                     height: 2rem;
@@ -283,13 +289,25 @@
                     border: 0.0625rem solid #fff;
                     max-width: 8.333%;
                     flex: 0 0 8.333%;
+                    @include media-max($xl) {
+                        max-width: 10%;
+                        flex: 0 0 10%;
+                    }
                     @include media-max($lg) {
                         max-width: 16.666%;
                         flex: 0 0 16.666%;
                     }
+                    @include media-max($md) {
+                        max-width: 20%;
+                        flex: 0 0 20%;
+                    }
                     @include media-max($sm) {
                         max-width: 25%;
                         flex: 0 0 25%;
+                    }
+                    @include media-max($xs) {
+                        max-width: 33%;
+                        flex: 0 0 33%;
                     }
 
 
@@ -322,8 +340,7 @@
                     @include media-max($xl) {
                         @include col(50%);
                     }
-
-                    @include media-max($md) {
+                    @include media-max($sm) {
                         @include col(100%);
                     }
 
